solved the output issues in w2v model

--- a/notebooks/Words2Vec.ipynb
+++ b/notebooks/Words2Vec.ipynb
@@ -20,11 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "id": "accompanied-sussex",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -211,7 +209,7 @@
        "4  [full, stack, developer, mfd]  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,16 +237,16 @@
     {
      "data": {
       "text/plain": [
-       "[('r', 0.9612724781036377),\n",
-       " ('scala', 0.9477375149726868),\n",
-       " ('java', 0.9473602771759033),\n",
-       " ('perl', 0.9447371363639832),\n",
-       " ('matlab', 0.9395166635513306),\n",
-       " ('c', 0.9001803398132324),\n",
-       " ('julia', 0.899307906627655),\n",
-       " ('cc', 0.8989156484603882),\n",
-       " ('programing', 0.8947098255157471),\n",
-       " ('javascala', 0.8921117782592773)]"
+       "[('r', 0.956484317779541),\n",
+       " ('java', 0.946160078048706),\n",
+       " ('scala', 0.945618212223053),\n",
+       " ('perl', 0.9335843324661255),\n",
+       " ('matlab', 0.9326244592666626),\n",
+       " ('julia', 0.9024061560630798),\n",
+       " ('cc', 0.9013063907623291),\n",
+       " ('ruby', 0.8984863758087158),\n",
+       " ('pythonr', 0.894433319568634),\n",
+       " ('c', 0.8915292024612427)]"
       ]
      },
      "execution_count": 2,
@@ -283,12 +281,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "brown-attribute",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-10-721a8ad2bd09>:1: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
+      "  w2v_model.most_similar(\"python\",topn = 50)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('r', 0.956484317779541),\n",
+       " ('java', 0.946160078048706),\n",
+       " ('scala', 0.945618212223053),\n",
+       " ('perl', 0.9335843324661255),\n",
+       " ('matlab', 0.9326244592666626),\n",
+       " ('julia', 0.9024061560630798),\n",
+       " ('cc', 0.9013063907623291),\n",
+       " ('ruby', 0.8984863758087158),\n",
+       " ('pythonr', 0.894433319568634),\n",
+       " ('c', 0.8915292024612427),\n",
+       " ('programing', 0.8880442380905151),\n",
+       " ('languages', 0.8850680589675903),\n",
+       " ('pyspark', 0.8822256326675415),\n",
+       " ('scripting', 0.8812841176986694),\n",
+       " ('programming', 0.8812732696533203),\n",
+       " ('php', 0.8769623041152954),\n",
+       " ('kotlin', 0.8761651515960693),\n",
+       " ('javascala', 0.8721016645431519),\n",
+       " ('clojure', 0.871893048286438),\n",
+       " ('sql', 0.8646789789199829),\n",
+       " ('javascript', 0.8611910343170166),\n",
+       " ('proficient', 0.8601363301277161),\n",
+       " ('bash', 0.8251327276229858),\n",
+       " ('similar', 0.8194860816001892),\n",
+       " ('proficiency', 0.8194475173950195),\n",
+       " ('weka', 0.8190482258796692),\n",
+       " ('sas', 0.7974124550819397),\n",
+       " ('familiar', 0.7943596243858337),\n",
+       " ('script', 0.7875332236289978),\n",
+       " ('generalpurpose', 0.786074161529541),\n",
+       " ('golang', 0.7855114936828613),\n",
+       " ('objectoriented', 0.779890239238739),\n",
+       " ('idl', 0.7792947888374329),\n",
+       " ('stata', 0.7767406702041626),\n",
+       " ('plus', 0.7744516730308533),\n",
+       " ('sparkml', 0.7722839713096619),\n",
+       " ('plsql', 0.7682650089263916),\n",
+       " ('rails', 0.7676447629928589),\n",
+       " ('pandas', 0.7672666907310486),\n",
+       " ('vba', 0.7645776867866516),\n",
+       " ('sklearn', 0.7642793655395508),\n",
+       " ('etcexperience', 0.7631373405456543),\n",
+       " ('helpful', 0.7601933479309082),\n",
+       " ('djs', 0.7580962181091309),\n",
+       " ('especially', 0.758017897605896),\n",
+       " ('gurobi', 0.7562761902809143),\n",
+       " ('cuda', 0.7547193765640259),\n",
+       " ('compiled', 0.7524574995040894),\n",
+       " ('jmp', 0.7518826723098755),\n",
+       " ('oo', 0.7503631114959717)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "w2v_model.save(\"w2v_model_baseline.model\")"
+    "w2v_model.most_similar(\"python\",topn = 50)"
    ]
   },
   {
@@ -1601,65 +1667,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 137,
    "id": "responsible-today",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['accounting',\n",
-       " 'marketing',\n",
-       " 'sales',\n",
-       " 'distribution',\n",
-       " 'logistic',\n",
-       " 'scm',\n",
-       " 'hr',\n",
-       " 'administration',\n",
-       " 'administrative',\n",
-       " 'management',\n",
-       " 'planning',\n",
-       " 'strategy',\n",
-       " 'strategic',\n",
+       "['strengths',\n",
+       " 'authentic',\n",
+       " 'communication',\n",
+       " 'communicative',\n",
+       " 'leadership',\n",
+       " 'conceptual',\n",
        " 'strategical',\n",
-       " 'bd',\n",
-       " 'reporting',\n",
-       " 'report',\n",
-       " 'visualization',\n",
-       " 'visualisation',\n",
-       " 'kpi',\n",
-       " 'business',\n",
-       " 'stakeholder',\n",
-       " 'client',\n",
-       " 'industry',\n",
-       " 'entrepreneurship',\n",
-       " 'entrepreneur',\n",
-       " 'entrepreneurial',\n",
-       " 'consulting',\n",
-       " 'consult',\n",
-       " 'analyst',\n",
-       " 'analyze',\n",
-       " 'analyse',\n",
-       " 'analysis',\n",
-       " 'analytical',\n",
-       " 'analytics',\n",
-       " 'analytic',\n",
-       " 'solution',\n",
-       " 'olap',\n",
-       " 'feasibility',\n",
-       " 'measurable',\n",
-       " 'profitable',\n",
-       " 'commercial',\n",
-       " 'crm',\n",
-       " 'efficiency',\n",
-       " 'advertising',\n",
-       " 'managing',\n",
-       " 'dashboards']"
+       " 'project',\n",
+       " 'management',\n",
+       " 'organization',\n",
+       " 'organizational',\n",
+       " 'organize',\n",
+       " 'coordination',\n",
+       " 'collaboration',\n",
+       " 'collaborative',\n",
+       " 'conflict',\n",
+       " 'presentation',\n",
+       " 'negotiation',\n",
+       " 'capable',\n",
+       " 'committed',\n",
+       " 'comittment',\n",
+       " 'flexibility',\n",
+       " 'flexible',\n",
+       " 'social',\n",
+       " 'interpersonal',\n",
+       " 'honesty',\n",
+       " 'honest',\n",
+       " 'trustful',\n",
+       " 'trustworthy',\n",
+       " 'loyal',\n",
+       " 'inclusive',\n",
+       " 'tolerant',\n",
+       " 'empathy',\n",
+       " 'empathetic',\n",
+       " 'empathic',\n",
+       " 'emotional',\n",
+       " 'positive',\n",
+       " 'listening',\n",
+       " 'verbal',\n",
+       " 'nonverbal',\n",
+       " 'motivation',\n",
+       " 'motivational',\n",
+       " 'integrity',\n",
+       " 'initiative',\n",
+       " 'selfinitiative',\n",
+       " 'proactive',\n",
+       " 'reliability',\n",
+       " 'reliable',\n",
+       " 'dependable',\n",
+       " 'responsible',\n",
+       " 'responsibility',\n",
+       " 'intercultural',\n",
+       " 'crosscultural',\n",
+       " 'creativity',\n",
+       " 'creative',\n",
+       " 'resourceful',\n",
+       " 'inventive',\n",
+       " 'mindful',\n",
+       " 'coaching',\n",
+       " 'training',\n",
+       " 'innovation',\n",
+       " 'innovative',\n",
+       " 'time',\n",
+       " 'teamwork',\n",
+       " 'teamplayer',\n",
+       " 'dynamic',\n",
+       " 'energetic',\n",
+       " 'accountable',\n",
+       " 'personality',\n",
+       " 'resultdriven',\n",
+       " 'driven',\n",
+       " 'independent',\n",
+       " 'constructive',\n",
+       " 'determined',\n",
+       " 'professional',\n",
+       " 'openmindedness',\n",
+       " 'assertive',\n",
+       " 'charismatic',\n",
+       " 'skilled',\n",
+       " 'openness',\n",
+       " 'vision',\n",
+       " 'ownership',\n",
+       " 'volunteering',\n",
+       " 'decisionmaking']"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1669,39 +1770,192 @@
     "with open(\"../fydjob/data/dicts/skills_dict.json\") as json_file:\n",
     "    skills = json.load(json_file)\n",
     "\n",
-    "skills[\"business\"]"
+    "\n",
+    "#flat_list = [skills for sublist in t for item in sublist]\n",
+    "\n",
+    "skills[\"soft_skills\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "residential-immunology",
+   "execution_count": 143,
+   "id": "anticipated-pilot",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       [[führende, app, marketing, beratungsagentur, ...\n",
-       "1       [[student, mfx, work, collaboration, team, bus...\n",
-       "4       [[phiture, growth, consultancy, closeknit, tea...\n",
-       "5       [[operating], [], [desire], [], [passion], [pu...\n",
-       "6       [[head, finance, home, mission, housing, every...\n",
-       "                              ...                        \n",
-       "1841    [[zalando, fulfillment, controller, perform], ...\n",
-       "1846    [[caya], [manage, process, caya, platform], [c...\n",
-       "1849    [[position, point, contact, architecture, soft...\n",
-       "1902    [[position, point, contact, architecture, soft...\n",
-       "1919    [[industry, market, road, freight, company, ge...\n",
-       "Name: job_text_sent, Length: 839, dtype: object"
+       "[('unix', 0.8978881239891052),\n",
+       " ('kotlin', 0.8968998193740845),\n",
+       " ('bash', 0.889998733997345),\n",
+       " ('linuxunix', 0.8891215920448303),\n",
+       " ('java', 0.8859942555427551),\n",
+       " ('cc', 0.8845880031585693),\n",
+       " ('scripting', 0.8822117447853088),\n",
+       " ('perl', 0.8744653463363647),\n",
+       " ('unixlinux', 0.866409182548523),\n",
+       " ('scala', 0.8583143949508667)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"job_text_sent\"]"
+    "w2v_model.wv.most_similar([\"python\",\"linux\"])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "introductory-boundary",
+   "metadata": {},
+   "source": [
+    "## only recommending the skills that are in the dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "treated-facility",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['r',\n",
+       " 'java',\n",
+       " 'scala',\n",
+       " 'perl',\n",
+       " 'matlab',\n",
+       " 'julia',\n",
+       " 'ruby',\n",
+       " 'c',\n",
+       " 'pyspark',\n",
+       " 'php']"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "with open(\"../fydjob/data/dicts/skills_dict.json\") as json_file:\n",
+    "    skills = json.load(json_file)\n",
+    "### flatten the json file into a list of words\n",
+    "term_list = [] ## list of skills\n",
+    "for cat in skills.keys():\n",
+    "    for i in (skills[cat]):\n",
+    "        term_list.append(i)\n",
+    "###\n",
+    "\n",
+    "### save an extensive list of vectors similar to the query\n",
+    "model_skills = w2v_model.wv.most_similar(positive = \"python\",topn= 100)         \n",
+    "### remove the distance \n",
+    "skill_words = []\n",
+    "for i in range(len(model_skills)):\n",
+    "    skill_words.append(model_skills[i][0])\n",
+    "skill_words\n",
+    "### return the 10 most important skills\n",
+    "[skill for skill in skill_words if skill in term_list][0:10]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "sufficient-musical",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def most_similar_skills(no_of_recommendations,dictionary,query):\n",
+    "    \n",
+    "    term_list = []\n",
+    "    for cat in dictionary.keys():\n",
+    "        for word in dictionary[cat]:\n",
+    "            term_list.append(word)\n",
+    "    \n",
+    "    model_skills = w2v_model.wv.most_similar(query,topn= 100)\n",
+    "    \n",
+    "    skill_words = []\n",
+    "    for i in range(len(model_skills)):\n",
+    "        skill_words.append(model_skills[i][0])\n",
+    "        \n",
+    "    return [skill for skill in skill_words if skill in term_list][0:no_of_recommendations]\n",
+    "\n",
+    "no_of_recommendations = 12\n",
+    "with open(\"../fydjob/data/dicts/skills_dict.json\") as json_file:\n",
+    "    dictionary= json.load(json_file)\n",
+    "\n",
+    "#model = w2v_model\n",
+    "\n",
+    "query = [\"phd\",\"keras\"]\n",
+    "\n",
+    "\n",
+    "test_query = most_similar_skills(no_of_recommendations,dictionary,query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "martial-matrix",
+   "metadata": {},
+   "source": [
+    "## Tagging the skills/term with the category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "hollow-proposal",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('theano', 'programming'),\n",
+       " ('sklearn', 'programming'),\n",
+       " ('pytorch', 'programming'),\n",
+       " ('scikitlearn', 'programming'),\n",
+       " ('cntk', 'programming'),\n",
+       " ('tensorflow', 'programming'),\n",
+       " ('spacy', 'programming'),\n",
+       " ('caffe', 'programming'),\n",
+       " ('pandas', 'programming'),\n",
+       " ('mathematics', 'knowledge'),\n",
+       " ('statistics', 'knowledge'),\n",
+       " ('nltk', 'programming')]"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "business_dict = skills[\"business\"]\n",
+    "knowledge_dict = skills[\"knowledge\"]\n",
+    "programming_dict = skills[\"programming\"]\n",
+    "soft_skills_dict = skills[\"soft_skills\"]\n",
+    "tech_adjectives_dict = skills[\"tech_adjectives\"]\n",
+    "\n",
+    "def category_tagger(x):\n",
+    "    if x in business_dict:\n",
+    "        return (x,\"business\")\n",
+    "    if x in knowledge_dict:\n",
+    "        return (x,\"knowledge\")\n",
+    "    if x in programming_dict:\n",
+    "        return (x,\"programming\")\n",
+    "    if x in soft_skills_dict:\n",
+    "        return (x,\"soft_skills\")\n",
+    "    if x in tech_adjectives_dict:\n",
+    "        return (x,\"tech_adjectives\")\n",
+    "\n",
+    "\n",
+    "[category_tagger(i) for i in test_query]"
    ]
   },
   {
