cleaned up workbook

--- a/notebooks/Words2Vec.ipynb
+++ b/notebooks/Words2Vec.ipynb
@@ -1666,151 +1666,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 137,
-   "id": "responsible-today",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['strengths',\n",
-       " 'authentic',\n",
-       " 'communication',\n",
-       " 'communicative',\n",
-       " 'leadership',\n",
-       " 'conceptual',\n",
-       " 'strategical',\n",
-       " 'project',\n",
-       " 'management',\n",
-       " 'organization',\n",
-       " 'organizational',\n",
-       " 'organize',\n",
-       " 'coordination',\n",
-       " 'collaboration',\n",
-       " 'collaborative',\n",
-       " 'conflict',\n",
-       " 'presentation',\n",
-       " 'negotiation',\n",
-       " 'capable',\n",
-       " 'committed',\n",
-       " 'comittment',\n",
-       " 'flexibility',\n",
-       " 'flexible',\n",
-       " 'social',\n",
-       " 'interpersonal',\n",
-       " 'honesty',\n",
-       " 'honest',\n",
-       " 'trustful',\n",
-       " 'trustworthy',\n",
-       " 'loyal',\n",
-       " 'inclusive',\n",
-       " 'tolerant',\n",
-       " 'empathy',\n",
-       " 'empathetic',\n",
-       " 'empathic',\n",
-       " 'emotional',\n",
-       " 'positive',\n",
-       " 'listening',\n",
-       " 'verbal',\n",
-       " 'nonverbal',\n",
-       " 'motivation',\n",
-       " 'motivational',\n",
-       " 'integrity',\n",
-       " 'initiative',\n",
-       " 'selfinitiative',\n",
-       " 'proactive',\n",
-       " 'reliability',\n",
-       " 'reliable',\n",
-       " 'dependable',\n",
-       " 'responsible',\n",
-       " 'responsibility',\n",
-       " 'intercultural',\n",
-       " 'crosscultural',\n",
-       " 'creativity',\n",
-       " 'creative',\n",
-       " 'resourceful',\n",
-       " 'inventive',\n",
-       " 'mindful',\n",
-       " 'coaching',\n",
-       " 'training',\n",
-       " 'innovation',\n",
-       " 'innovative',\n",
-       " 'time',\n",
-       " 'teamwork',\n",
-       " 'teamplayer',\n",
-       " 'dynamic',\n",
-       " 'energetic',\n",
-       " 'accountable',\n",
-       " 'personality',\n",
-       " 'resultdriven',\n",
-       " 'driven',\n",
-       " 'independent',\n",
-       " 'constructive',\n",
-       " 'determined',\n",
-       " 'professional',\n",
-       " 'openmindedness',\n",
-       " 'assertive',\n",
-       " 'charismatic',\n",
-       " 'skilled',\n",
-       " 'openness',\n",
-       " 'vision',\n",
-       " 'ownership',\n",
-       " 'volunteering',\n",
-       " 'decisionmaking']"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "with open(\"../fydjob/data/dicts/skills_dict.json\") as json_file:\n",
-    "    skills = json.load(json_file)\n",
-    "\n",
-    "\n",
-    "#flat_list = [skills for sublist in t for item in sublist]\n",
-    "\n",
-    "skills[\"soft_skills\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "id": "anticipated-pilot",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('unix', 0.8978881239891052),\n",
-       " ('kotlin', 0.8968998193740845),\n",
-       " ('bash', 0.889998733997345),\n",
-       " ('linuxunix', 0.8891215920448303),\n",
-       " ('java', 0.8859942555427551),\n",
-       " ('cc', 0.8845880031585693),\n",
-       " ('scripting', 0.8822117447853088),\n",
-       " ('perl', 0.8744653463363647),\n",
-       " ('unixlinux', 0.866409182548523),\n",
-       " ('scala', 0.8583143949508667)]"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "w2v_model.wv.most_similar([\"python\",\"linux\"])\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "introductory-boundary",
+   "id": "incoming-chicken",
    "metadata": {},
    "source": [
     "## only recommending the skills that are in the dict"
@@ -1818,90 +1675,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "treated-facility",
+   "execution_count": 167,
+   "id": "massive-scale",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['r',\n",
-       " 'java',\n",
-       " 'scala',\n",
-       " 'perl',\n",
-       " 'matlab',\n",
-       " 'julia',\n",
-       " 'ruby',\n",
-       " 'c',\n",
-       " 'pyspark',\n",
-       " 'php']"
+       "['theano',\n",
+       " 'sklearn',\n",
+       " 'pytorch',\n",
+       " 'scikitlearn',\n",
+       " 'cntk',\n",
+       " 'tensorflow',\n",
+       " 'spacy',\n",
+       " 'caffe',\n",
+       " 'pandas',\n",
+       " 'mathematics',\n",
+       " 'statistics',\n",
+       " 'nltk']"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "with open(\"../fydjob/data/dicts/skills_dict.json\") as json_file:\n",
-    "    skills = json.load(json_file)\n",
-    "### flatten the json file into a list of words\n",
-    "term_list = [] ## list of skills\n",
-    "for cat in skills.keys():\n",
-    "    for i in (skills[cat]):\n",
-    "        term_list.append(i)\n",
-    "###\n",
-    "\n",
-    "### save an extensive list of vectors similar to the query\n",
-    "model_skills = w2v_model.wv.most_similar(positive = \"python\",topn= 100)         \n",
-    "### remove the distance \n",
-    "skill_words = []\n",
-    "for i in range(len(model_skills)):\n",
-    "    skill_words.append(model_skills[i][0])\n",
-    "skill_words\n",
-    "### return the 10 most important skills\n",
-    "[skill for skill in skill_words if skill in term_list][0:10]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "id": "sufficient-musical",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def most_similar_skills(no_of_recommendations,dictionary,query):\n",
-    "    \n",
+    "def most_similar_skills(no_recom,dictionary,query):\n",
+    "    '''\n",
+    "    This function show the most similar skills to the input,which are also within the tech skills dictionary\n",
+    "    '''\n",
+    "    ### Turn the dictionary into a comprehensive list of all terms\n",
     "    term_list = []\n",
     "    for cat in dictionary.keys():\n",
     "        for word in dictionary[cat]:\n",
     "            term_list.append(word)\n",
-    "    \n",
+    "\n",
+    "   ### Fetch similar words from the w2v model\n",
     "    model_skills = w2v_model.wv.most_similar(query,topn= 100)\n",
     "    \n",
+    "   ### only get the words without the distance measure \n",
     "    skill_words = []\n",
     "    for i in range(len(model_skills)):\n",
     "        skill_words.append(model_skills[i][0])\n",
     "        \n",
-    "    return [skill for skill in skill_words if skill in term_list][0:no_of_recommendations]\n",
+    "    return [skill for skill in skill_words if skill in term_list][0:no_recom] # returns the number of similar skills\n",
     "\n",
-    "no_of_recommendations = 12\n",
+    "no_recom = 12\n",
+    "\n",
     "with open(\"../fydjob/data/dicts/skills_dict.json\") as json_file:\n",
     "    dictionary= json.load(json_file)\n",
-    "\n",
-    "#model = w2v_model\n",
     "\n",
     "query = [\"phd\",\"keras\"]\n",
     "\n",
     "\n",
-    "test_query = most_similar_skills(no_of_recommendations,dictionary,query)"
+    "most_similar_skills(no_recom,dictionary,query)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "martial-matrix",
+   "id": "controlling-difficulty",
    "metadata": {},
    "source": [
     "## Tagging the skills/term with the category"
@@ -1910,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "hollow-proposal",
+   "id": "equipped-atlanta",
    "metadata": {},
    "outputs": [
     {
@@ -1942,7 +1776,11 @@
     "soft_skills_dict = skills[\"soft_skills\"]\n",
     "tech_adjectives_dict = skills[\"tech_adjectives\"]\n",
     "\n",
+    "    \n",
     "def category_tagger(x):\n",
+    "    '''\n",
+    "    This function assigns the respective category to the recommended list\n",
+    "    '''\n",
     "    if x in business_dict:\n",
     "        return (x,\"business\")\n",
     "    if x in knowledge_dict:\n",
@@ -1960,16 +1798,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 168,
    "id": "suited-mozambique",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'job_text_sent'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m~/.pyenv/versions/3.8.6/envs/fydjob/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3079\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3080\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3081\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'job_text_sent'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-168-5f1bbd82cc48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mpos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"NN\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"job_text_sent\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"job_text_sent\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnoun_extractor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.8.6/envs/fydjob/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3022\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3023\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3024\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3025\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3026\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.8.6/envs/fydjob/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3080\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3081\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3082\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3083\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3084\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'job_text_sent'"
+     ]
+    }
+   ],
    "source": [
     "from nltk.tag import pos_tag\n",
     "\n",
-    "def noun_extractor(text):\n",
+    "def noun_extractor(text,pos):\n",
     "    '''\n",
     "    This function takes a text and returns only the nouns in the text.\n",
     "    It can be adjusted to any POS by changing the tag below.\n",
@@ -1977,10 +1837,10 @@
     "    new_text = []\n",
     "    for sentence in text:\n",
     "        tagged_sentence = pos_tag(sentence)\n",
-    "        new_text.append([word for word,tag in tagged_sentence if tag in (\"NN\")]) #change me!\n",
+    "        new_text.append([word for word,tag in tagged_sentence if tag in (pos)]) #change me!\n",
     "    return new_text\n",
     "    \n",
-    "\n",
+    "pos = \"NN\"\n",
     "df[\"job_text_sent\"] =df[\"job_text_sent\"].apply(noun_extractor)\n",
     "              \n",
     "\n",
