--- a/notebooks/Words2Vec.ipynb
+++ b/notebooks/Words2Vec.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 169,
    "id": "brown-attribute",
    "metadata": {},
    "outputs": [
@@ -289,8 +289,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-10-721a8ad2bd09>:1: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
-      "  w2v_model.most_similar(\"python\",topn = 50)\n"
+      "<ipython-input-169-cd99036e07f5>:1: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
+      "  w2v_model.most_similar(\"python\",topn = 5)\n"
      ]
     },
     {
@@ -300,61 +300,16 @@
        " ('java', 0.946160078048706),\n",
        " ('scala', 0.945618212223053),\n",
        " ('perl', 0.9335843324661255),\n",
-       " ('matlab', 0.9326244592666626),\n",
-       " ('julia', 0.9024061560630798),\n",
-       " ('cc', 0.9013063907623291),\n",
-       " ('ruby', 0.8984863758087158),\n",
-       " ('pythonr', 0.894433319568634),\n",
-       " ('c', 0.8915292024612427),\n",
-       " ('programing', 0.8880442380905151),\n",
-       " ('languages', 0.8850680589675903),\n",
-       " ('pyspark', 0.8822256326675415),\n",
-       " ('scripting', 0.8812841176986694),\n",
-       " ('programming', 0.8812732696533203),\n",
-       " ('php', 0.8769623041152954),\n",
-       " ('kotlin', 0.8761651515960693),\n",
-       " ('javascala', 0.8721016645431519),\n",
-       " ('clojure', 0.871893048286438),\n",
-       " ('sql', 0.8646789789199829),\n",
-       " ('javascript', 0.8611910343170166),\n",
-       " ('proficient', 0.8601363301277161),\n",
-       " ('bash', 0.8251327276229858),\n",
-       " ('similar', 0.8194860816001892),\n",
-       " ('proficiency', 0.8194475173950195),\n",
-       " ('weka', 0.8190482258796692),\n",
-       " ('sas', 0.7974124550819397),\n",
-       " ('familiar', 0.7943596243858337),\n",
-       " ('script', 0.7875332236289978),\n",
-       " ('generalpurpose', 0.786074161529541),\n",
-       " ('golang', 0.7855114936828613),\n",
-       " ('objectoriented', 0.779890239238739),\n",
-       " ('idl', 0.7792947888374329),\n",
-       " ('stata', 0.7767406702041626),\n",
-       " ('plus', 0.7744516730308533),\n",
-       " ('sparkml', 0.7722839713096619),\n",
-       " ('plsql', 0.7682650089263916),\n",
-       " ('rails', 0.7676447629928589),\n",
-       " ('pandas', 0.7672666907310486),\n",
-       " ('vba', 0.7645776867866516),\n",
-       " ('sklearn', 0.7642793655395508),\n",
-       " ('etcexperience', 0.7631373405456543),\n",
-       " ('helpful', 0.7601933479309082),\n",
-       " ('djs', 0.7580962181091309),\n",
-       " ('especially', 0.758017897605896),\n",
-       " ('gurobi', 0.7562761902809143),\n",
-       " ('cuda', 0.7547193765640259),\n",
-       " ('compiled', 0.7524574995040894),\n",
-       " ('jmp', 0.7518826723098755),\n",
-       " ('oo', 0.7503631114959717)]"
+       " ('matlab', 0.9326244592666626)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w2v_model.most_similar(\"python\",topn = 50)"
+    "w2v_model.most_similar(\"python\",topn = 5)"
    ]
   },
   {
@@ -1667,7 +1622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incoming-chicken",
+   "id": "elder-intellectual",
    "metadata": {},
    "source": [
     "## only recommending the skills that are in the dict"
@@ -1675,28 +1630,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "massive-scale",
+   "execution_count": 174,
+   "id": "biblical-diagnosis",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['theano',\n",
-       " 'sklearn',\n",
-       " 'pytorch',\n",
-       " 'scikitlearn',\n",
-       " 'cntk',\n",
-       " 'tensorflow',\n",
-       " 'spacy',\n",
-       " 'caffe',\n",
-       " 'pandas',\n",
-       " 'mathematics',\n",
-       " 'statistics',\n",
-       " 'nltk']"
+       "['organization', 'strategic', 'collaboration']"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,12 +1666,12 @@
     "        \n",
     "    return [skill for skill in skill_words if skill in term_list][0:no_recom] # returns the number of similar skills\n",
     "\n",
-    "no_recom = 12\n",
+    "no_recom = 3\n",
     "\n",
     "with open(\"../fydjob/data/dicts/skills_dict.json\") as json_file:\n",
     "    dictionary= json.load(json_file)\n",
     "\n",
-    "query = [\"phd\",\"keras\"]\n",
+    "query = [\"leadership\"]\n",
     "\n",
     "\n",
     "most_similar_skills(no_recom,dictionary,query)"
@@ -1735,7 +1679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controlling-difficulty",
+   "id": "approximate-cloud",
    "metadata": {},
    "source": [
     "## Tagging the skills/term with the category"
@@ -1744,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "equipped-atlanta",
+   "id": "perfect-ocean",
    "metadata": {},
    "outputs": [
     {
